# tera-rust-launcher

./: .gitignore  README.md
teralaunch/: .env  config.ini  package-lock.json  package.json
teralaunch/src/: app.js  home.html  index.css  index.html  login.css  login.html  router.js  styles.css  translations.json
teralaunch/src-tauri/: Cargo.toml  tauri.conf.json
teralaunch/src-tauri/src/: main.rs
teralib/: Cargo.toml  build.rs
teralib/src/: _serverlist_proto.rs  config.rs  global_credentials.rs  lib.rs  main.rs  serverlist.proto
teralib/src/config/: config.json
teralib/src/game/: mod.rs
